backend/base/service.yaml
apiVersion: discovery.k8s.io/v1
kind: Service
metadata:
  name: moadong-service
spec:
  selector:
    app: moadong
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: actuator
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
